devops/argocd/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lmthing
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
