devops/argocd/core/chat-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-auth
  namespace: lmthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-auth
  template:
    metadata:
      labels:
        app: chat-auth
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: chat-auth
          image: lmthingacr.azurecr.io/chat-auth:8c60cc6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: chat-auth
  namespace: lmthing
spec:
  selector:
    app: chat-auth
  ports:
    - port: 80
      targetPort: 80
