devops/argocd/core/computer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: computer
  namespace: lmthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: computer
  template:
    metadata:
      labels:
        app: computer
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: computer
          image: lmthingacr.azurecr.io/computer:8c60cc6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: computer
  namespace: lmthing
spec:
  selector:
    app: computer
  ports:
    - port: 80
      targetPort: 80
